--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "jest": "^28.1.3",
