Modify tests to account for bug fixes and unexpected source data (pid 10 - original price does not match default)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Overview service for system design capstone",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "nodemon server/server.js"
   },
   "repository": {
